# agrisentry-iot-gateway

./: .env.example  .env.old  .gitignore  Cargo.toml  Dockerfile  Dockerfile.mosquitto  LICENSE  docker-compose.yml  readme.md  schema.sql
.github/workflows/: rust-ci.yml  rust-ci.yml 
infra/: Dockerfile.mosquitto  mosquitto.conf
load_tests/: stress_test.js
migrations/: 20260101000000_create_sensor_readings.sql
mosquitto/config/: mosquitto.conf  pwfile
src/: api.rs  cli.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  mqtt.rs
src/engine/: mod.rs  mqtt.rs  simulator.rs  validator.rs
tests/: test_api.rs  test_orchestrator.rs
tests/common/: mod.rs
