[package]
name = "agrisentry-iot-gateway"
version = "0.1.0"
edition = "2021"
description = "High-performance MQTT consumer and TimescaleDB ingestor"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# MQTT Client (High Performance concurrent consumer)
rumqttc = "0.24"

# Database (PostgreSQL / TimescaleDB integration)
# Note: 'macros' feature enables compile-time SQL query validation
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }

# Serialization / Deserialization (Payload validation contract)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client for calling Python FastAPI microservice
reqwest = { version = "0.11", features = ["json"] }

# Strict Data Types for database mapping
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Professional Error Handling (No panics allowed)
thiserror = "1.0"
anyhow = "1.0"

# Environment Variables & Professional Async Logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Server for health checks and ingestion API
actix-web = "4.13.0"
actix-cors = "0.7.0"

